--- a/customer_portal.html
+++ b/customer_portal.html
@@ -297,14 +297,22 @@
                             <h4 class="pricing-level">Level 2 Detail</h4>
                             <p class="pricing-price">$249</p>
                             <ul class="feature-list">
-                                <li><strong>All items in Level 1, plus:</strong></li>
-                                <li>Shampoo carpets and seats</li>
-                                <li>Premium Leather treatment</li>
-                                <li>Door jam cleaning</li>
-                                <li>Rims and tires cleaned and wiped down</li>
-                                <li>console scrub down</li>
-                                <li>Pet hair removal</li>
-                                <li>Odor removal</li>
+                                <li>External high pressure wash</li>
+                                <li>Tire cleaner</li>
+                                <li>Window cleaning inside and out</li>
+                                <li>Deep vaccuming</li>
+                                <li>Display controls and panels wipedown</li>
+                                <li>Mirror cleaning</li>
+                                <li>Seat vaccum</li>
+                                <li>Surface protectent for the dash and display/controls</li>
+                                <li>Steering wheel and dash clean</li>
+                                <li><strong>Shampoo carpets and seats</strong></li>
+                                <li><strong>Premium Leather treatment</strong></li>
+                                <li><strong>Door jam cleaning</strong></li>
+                                <li><strong>Rims and tires cleaned and wiped down</strong></li>
+                                <li><strong>console scrub down</strong></li>
+                                <li><strong>Pet hair removal</strong></li>
+                                <li><strong>Odor removal</strong></li>
                             </ul>
                             <button class="select-package-btn btn-green" data-package-type="Level 2 Detail - Sedan" data-package-price="249">Select Package</button>
                         </div>
@@ -312,16 +320,31 @@
                             <h4 class="pricing-level">Level 3 Detail</h4>
                             <p class="pricing-price">$349</p>
                             <ul class="feature-list">
-                                <li><strong>All items in Level 2, plus:</strong></li>
-                                <li>FINE TOOTH COMB in between seats cleaning</li>
-                                <li>Glove compartment cleaning</li>
-                                <li>Trunk shampoo and vaccum</li>
-                                <li>Door controls cleaning</li>
-                                <li>Hard to reach areas deep level shampoo</li>
-                                <li>Meticulous cleaning of all frequently touched surfaces</li>
-                                <li>External bug removal</li>
-                                <li>Free microfiber cloth</li>
-                                <li>Protection plan (complimentary maintenance clean within 15 days)</li>
+                                <li>External high pressure wash</li>
+                                <li>Tire cleaner</li>
+                                <li>Window cleaning inside and out</li>
+                                <li>Deep vaccuming</li>
+                                <li>Display controls and panels wipedown</li>
+                                <li>Mirror cleaning</li>
+                                <li>Seat vaccum</li>
+                                <li>Surface protectent for the dash and display/controls</li>
+                                <li>Steering wheel and dash clean</li>
+                                <li>Shampoo carpets and seats</li>
+                                <li>Premium Leather treatment</li>
+                                <li>Door jam cleaning</li>
+                                <li>Rims and tires cleaned and wiped down</li>
+                                <li>console scrub down</li>
+                                <li>Pet hair removal</li>
+                                <li>Odor removal</li>
+                                <li><strong>FINE TOOTH COMB in between seats cleaning</strong></li>
+                                <li><strong>Glove compartment cleaning</strong></li>
+                                <li><strong>Trunk shampoo and vaccum</strong></li>
+                                <li><strong>Door controls cleaning</strong></li>
+                                <li><strong>Hard to reach areas deep level shampoo</strong></li>
+                                <li><strong>Meticulous cleaning of all frequently touched surfaces</strong></li>
+                                <li><strong>External bug removal</strong></li>
+                                <li><strong>Free microfiber cloth</strong></li>
+                                <li><strong>Protection plan (complimentary maintenance clean within 15 days)</strong></li>
                             </ul>
                             <button class="select-package-btn btn-green" data-package-type="Level 3 Detail - Sedan" data-package-price="349">Select Package</button>
                         </div>
@@ -354,14 +377,22 @@
                             <h4 class="pricing-level">Level 2 Detail</h4>
                             <p class="pricing-price">$299</p>
                             <ul class="feature-list">
-                                <li><strong>All items in Level 1, plus:</strong></li>
-                                <li>Shampoo carpets and seats</li>
-                                <li>Premium Leather treatment</li>
-                                <li>Door jam cleaning</li>
-                                <li>Rims and tires cleaned and wiped down</li>
-                                <li>console scrub down</li>
-                                <li>Pet hair removal</li>
-                                <li>Odor removal</li>
+                                <li>External high pressure wash</li>
+                                <li>Tire cleaner</li>
+                                <li>Window cleaning inside and out</li>
+                                <li>Deep vaccuming</li>
+                                <li>Display controls and panels wipedown</li>
+                                <li>Mirror cleaning</li>
+                                <li>Seat vaccum</li>
+                                <li>Surface protectent for the dash and display/controls</li>
+                                <li>Steering wheel and dash clean</li>
+                                <li><strong>Shampoo carpets and seats</strong></li>
+                                <li><strong>Premium Leather treatment</strong></li>
+                                <li><strong>Door jam cleaning</strong></li>
+                                <li><strong>Rims and tires cleaned and wiped down</strong></li>
+                                <li><strong>console scrub down</strong></li>
+                                <li><strong>Pet hair removal</strong></li>
+                                <li><strong>Odor removal</strong></li>
                             </ul>
                             <button class="select-package-btn btn-green" data-package-type="Level 2 Detail - SUV/Truck" data-package-price="299">Select Package</button>
                         </div>
@@ -369,16 +400,31 @@
                             <h4 class="pricing-level">Level 3 Detail</h4>
                             <p class="pricing-price">$399</p>
                             <ul class="feature-list">
-                                <li><strong>All items in Level 2, plus:</strong></li>
-                                <li>FINE TOOTH COMB in between seats cleaning</li>
-                                <li>Glove compartment cleaning</li>
-                                <li>Trunk (for vans/SUVs) shampoo and vaccum</li>
-                                <li>Door controls cleaning</li>
-                                <li>Hard to reach areas deep level shampoo</li>
-                                <li>Meticulous cleaning of all frequently touched surfaces</li>
-                                <li>External bug removal</li>
-                                <li>Free microfiber cloth</li>
-                                <li>Protection plan (complimentary maintenance clean within 15 days)</li>
+                                <li>External high pressure wash</li>
+                                <li>Tire cleaner</li>
+                                <li>Window cleaning inside and out</li>
+                                <li>Deep vaccuming</li>
+                                <li>Display controls and panels wipedown</li>
+                                <li>Mirror cleaning</li>
+                                <li>Seat vaccum</li>
+                                <li>Surface protectent for the dash and display/controls</li>
+                                <li>Steering wheel and dash clean</li>
+                                <li>Shampoo carpets and seats</li>
+                                <li>Premium Leather treatment</li>
+                                <li>Door jam cleaning</li>
+                                <li>Rims and tires cleaned and wiped down</li>
+                                <li>console scrub down</li>
+                                <li>Pet hair removal</li>
+                                <li>Odor removal</li>
+                                <li><strong>FINE TOOTH COMB in between seats cleaning</strong></li>
+                                <li><strong>Glove compartment cleaning</strong></li>
+                                <li><strong>Trunk (for vans/SUVs) shampoo and vaccum</strong></li>
+                                <li><strong>Door controls cleaning</strong></li>
+                                <li><strong>Hard to reach areas deep level shampoo</strong></li>
+                                <li><strong>Meticulous cleaning of all frequently touched surfaces</strong></li>
+                                <li><strong>External bug removal</strong></li>
+                                <li><strong>Free microfiber cloth</strong></li>
+                                <li><strong>Protection plan (complimentary maintenance clean within 15 days)</strong></li>
                             </ul>
                             <button class="select-package-btn btn-green" data-package-type="Level 3 Detail - SUV/Truck" data-package-price="399">Select Package</button>
                         </div>
@@ -545,10 +591,10 @@
                 suvTruckPackagesTrack: document.getElementById('suv-truck-packages-track'), 
                 sedanPackagesDots: document.getElementById('sedan-packages-dots'), 
                 suvTruckPackagesDots: document.getElementById('suv-truck-packages-dots'), 
-                sedanPrevBtn: document.getElementById('sedan-prev-btn'), // New
-                sedanNextBtn: document.getElementById('sedan-next-btn'), // New
-                suvTruckPrevBtn: document.getElementById('suv-truck-prev-btn'), // New
-                suvTruckNextBtn: document.getElementById('suv-truck-next-btn'), // New
+                sedanPrevBtn: document.getElementById('sedan-prev-btn'), 
+                sedanNextBtn: document.getElementById('sedan-next-btn'), 
+                suvTruckPrevBtn: document.getElementById('suv-truck-prev-btn'), 
+                suvTruckNextBtn: document.getElementById('suv-truck-next-btn'), 
                 bookingFormSection: document.getElementById('booking-form-section'),
                 selectedPackageDisplay: document.getElementById('selected-package-display'),
                 selectedPackageTypeInput: document.getElementById('selected-package-type'),
@@ -948,7 +994,7 @@
                     destroy: () => {
                         stopAutoSlide();
                         prevBtn.removeEventListener('click', prevSlide);
-                        nextBtn.removeEventListener('click', nextSlide);
+                        nextBtn.removeEventListener('click', nextBtn); // Fix: nextBtn instead of prevBtn
                         dots.forEach(dot => dot.removeEventListener('click', () => {})); // Remove dot listeners
                     }
                 };
@@ -1211,14 +1257,16 @@
             // Handle window resize to re-evaluate slider activation
             window.addEventListener('resize', () => {
                 if (window.innerWidth <= MOBILE_BREAKPOINT) {
+                    // Re-initialize if not already and visible
                     if (elements.sedanPackagesSlider.style.display === 'block' && !sedanSliderInstance) {
                         sedanSliderInstance = initPackageSlider('sedan-packages-slider', 'sedan-packages-track', 'sedan-packages-dots', 'sedan-prev-btn', 'sedan-next-btn');
                     }
                     if (elements.suvTruckPackagesSlider.style.display === 'block' && !suvTruckSliderInstance) {
                         suvTruckSliderInstance = initPackageSlider('suv-truck-packages-slider', 'suv-truck-packages-track', 'suv-truck-packages-dots', 'suv-truck-prev-btn', 'suv-truck-next-btn');
                     }
-                    if (sedanSliderInstance) sedanSliderInstance.start();
-                    if (suvTruckSliderInstance) suvTruckSliderInstance.start();
+                    // Start auto-slide if visible
+                    if (elements.sedanPackagesSlider.style.display === 'block' && sedanSliderInstance) sedanSliderInstance.start();
+                    if (elements.suvTruckPackagesSlider.style.display === 'block' && suvTruckSliderInstance) suvTruckSliderInstance.start();
                 } else {
                     // Stop sliders and revert to grid layout on larger screens
                     if (sedanSliderInstance) sedanSliderInstance.stop();
