--- a/customer_portal.html
+++ b/customer_portal.html
@@ -12,7 +12,7 @@
         .form-section, .feature-section, #vehicle-type-selection, #package-selection-container, #booking-form-section, #confirmation-message { display: none; } /* Hide sections by default */
         /* Custom styles for time buttons */
         .time-button {
-            @apply px-4 py-2 rounded-lg border-2 border-gray-300 text-gray-700 font-medium cursor-pointer transition-colors duration-200;
+            @apply px-4 py-2 rounded-lg border-2 border-gray-300 /* border-gray-300 */ text-gray-700 font-medium cursor-pointer transition-colors duration-200;
         }
         .time-button.selected {
             @apply bg-blue-600 text-white border-green-600; /* Green border for selected time */
@@ -262,7 +262,7 @@
                                 <li><strong>Premium Leather treatment</strong></li>
                                 <li><strong>Door jam cleaning</strong></li>
                                 <li><strong>Rims and tires cleaned and wiped down</strong></li>
-                                <li><strong>console scrub down</strong></li>
+                                <li><strong>Console scrub down</strong></li>
                                 <li><strong>Pet hair removal</strong></li>
                                 <li><strong>Odor removal</strong></li>
                             </ul>
@@ -288,7 +288,7 @@
                                 <li>Premium Leather treatment</li>
                                 <li>Door jam cleaning</li>
                                 <li>Rims and tires cleaned and wiped down</li>
-                                <li>console scrub down</li>
+                                <li>Console scrub down</li>
                                 <li>Pet hair removal</li>
                                 <li>Odor removal</li>
                                 <li><strong>FINE TOOTH COMB in between seats cleaning</strong></li>
@@ -346,7 +346,7 @@
                                 <li><strong>Premium Leather treatment</strong></li>
                                 <li><strong>Door jam cleaning</strong></li>
                                 <li><strong>Rims and tires cleaned and wiped down</strong></li>
-                                <li><strong>console scrub down</strong></li>
+                                <li><strong>Console scrub down</strong></li>
                                 <li><strong>Pet hair removal</strong></li>
                                 <li><strong>Odor removal</strong></li>
                             </ul>
@@ -372,7 +372,7 @@
                                 <li>Premium Leather treatment</li>
                                 <li>Door jam cleaning</li>
                                 <li>Rims and tires cleaned and wiped down</li>
-                                <li>console scrub down</li>
+                                <li>Console scrub down</li>
                                 <li>Pet hair removal</li>
                                 <li>Odor removal</li>
                                 <li><strong>FINE TOOTH COMB in between seats cleaning</strong></li>
